--- a/aboutus.html
+++ b/aboutus.html
@@ -16,6 +16,12 @@
             </ul>
         </nav>
         <h1>This is About Us Page</h1>
+
+        <footer>
+            <span class="footer-left">&copy; 2025 Shirleen</span>
+            <span class="footer-right">Code/content generated with the assistance from GenAI</span>
+        </footer>
+
         <script src="script.js"></script>
     </body>
 </html>
