--- a/home.html
+++ b/home.html
@@ -15,7 +15,20 @@
                 <li><a href="#" data-page="aboutus">About Us</a></li>
             </ul>
         </nav>
-        <h1>This is Home Page</h1>
+        <main id="content">
+            <h1>Appliance Energy Consumption in Australia</h1>
+            <p>
+                G'day! Here, you can have an overview of the household appliance energy consumption in the Australian market.
+            </p>
+            <div class="fun-fact-box">
+                <h2>Fun Facts</h2>
+                <ul>
+                    <li><strong>Energy Labels:</strong> More stars = more energy efficiency. Choose wisely!</li>
+                    <li><strong>Standby Power:</strong> Appliances on standby can cost up to $100/year. Turn them off at the wall!</li>
+                    <li><strong>Smart Savings:</strong> Use smart plugs or pick fridges/appliances with low running costs.</li>
+                </ul>
+            </div>
+        </main>
 
         <footer>
             <span class="footer-left">&copy; 2025 Shirleen</span>
