--- a/television.html
+++ b/television.html
@@ -15,7 +15,42 @@
                 <li><a href="#" data-page="aboutus">About Us</a></li>
             </ul>
         </nav>
-        <h1>This is Television Page</h1>
+        <main>
+            <h1>Television Page</h1>
+
+            <!-- Top Brands Chart -->
+            <section class="content-box">
+                <h2>Top 10 TV Brands that Dominates Australian Market</h2>
+                <img src="top_brands.png" alt="Bar Chart of Top Brands" class="responsive-img">
+            </section>
+
+            <!-- How to choose an energy-efficient TV -->
+            <section class="tips-container">
+                <h2>How to Choose an Energy-Efficient TV</h2>
+                <div class="tips-grid">
+                    <div class="tip-box">
+                        <h3>&#9728; Check the Energy Rating</h3>
+                        <p>Look for TVs with higher star ratings — more stars mean better efficiency.</p>
+                    </div>
+                    <div class="tip-box">
+                        <h3>&#9728; Consider Screen Size</h3>
+                        <p>Bigger screens use more power. Choose the size that fits your room best.</p>
+                    </div>
+                    <div class="tip-box">
+                        <h3>&#9728; Compare Technologies</h3>
+                        <p>LED and OLED TVs are more efficient than older plasma models.</p>
+                    </div>
+                    <div class="tip-box">
+                        <h3>&#9728; Use Energy-Saving Modes</h3>
+                        <p>Enable eco or power-saving settings to cut down electricity usage.</p>
+                    </div>
+                    <div class="tip-box">
+                        <h3>&#9728; Mind Standby Power</h3>
+                        <p>Even when off, TVs can draw power. Switch off at the wall to save.</p>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <footer>
             <span class="footer-left">&copy; 2025 Shirleen</span>
