--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,25 @@
                 <li><a href="#" data-page="aboutus">About Us</a></li>
             </ul>
         </nav>
-        <h1>This is About Us Page</h1>
+        <main>
+            <h1>About Us</h1>
+
+            <div class="fun-fact-box">
+                <h2>Who We Are</h2>
+                <p>
+                    This website was created to explore television energy efficiency 
+                    and provide useful insights for consumers. We aim to make data simple and practical.
+                </p>
+            </div>
+
+            <div class="fun-fact-box">
+                <h2>Our Mission</h2>
+                <p>
+                    To raise awareness about the power consumption of televisions 
+                    and support smarter, eco-friendly choices in the Australian market.
+                </p>
+            </div>
+        </main>
 
         <footer>
             <span class="footer-left">&copy; 2025 Shirleen</span>
