--- a/television.html
+++ b/television.html
@@ -10,7 +10,7 @@
         <nav>
             <img src="power_logo.png" alt="Logo">
             <ul>
-                <li><a href="#" data-page="home">Home</a></li>
+                <li><a href="#" data-page="index">Home</a></li>
                 <li><a href="#" data-page="television">Television</a></li>
                 <li><a href="#" data-page="aboutus">About Us</a></li>
             </ul>
