nav feedback issue

--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,7 @@
         </main>
 
         <footer>
-            <span class="footer-left">&copy; 2025 Shirleen</span>
+            <span class="footer-left">&copy; 2025 Shirleen Chuo Tsze Ting</span>
             <span class="footer-right">Code/content generated with the assistance from GenAI</span>
         </footer>
 
